--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <!-- products sections starts here  -->
       <section class="products-section">
-        <h1 style="text-align: center; margin-bottom: 10px">Prodcuts</h1>
+        <h1 style="text-align: center; margin-bottom: 10px">Products</h1>
         <div class="grid-container">
           <div class="single-product">
             <img src="./images/products/bag.png" alt="" />
